# openkakao

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.en.md  README.md  login_test.py  pyproject.toml  refresh_and_login.py  test_connection.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: deploy-docs.yml  openkakao-rs-ci.yml  openkakao-rs-release.yml  update-formula-sha.yml
Formula/: openkakao.rb
agents/ceo/: GOALS.md
docs/: RELEASING_RUST.md  TECHNICAL_REFERENCE.md  docs.json  index.md  installation.md  installation.mdx  introduction.md  introduction.mdx  mint.json  package-lock.json  package.json  quickstart.md  quickstart.mdx
docs/.vitepress/: config.ts
docs/_archive/: TECHNICAL_REFERENCE.md
docs/cli/: auth.md  auth.mdx  chat.md  chat.mdx  diagnostics.mdx  friends.md  media.mdx  message.md  message.mdx  overview.mdx  profile.mdx  watch.mdx
docs/guides/: authentication.md  authentication.mdx  automation.mdx  sending-messages.md  sending-messages.mdx  watching-messages.mdx
docs/plans/: 2026-03-08-auth-docs-i18n-design.md  2026-03-08-auth-session-resilience-design.md  2026-03-08-doppler-password-cmd-design.md  2026-03-08-fumadocs-design.md  2026-03-08-loco-friend-profile-investigation.md  2026-03-08-ops-hardening-design.md  2026-03-08-watch-hooks-design.md  2026-03-09-local-friend-graph-design.md
docs/protocol/: connection.mdx  encryption.md  encryption.mdx  overview.mdx  packets.mdx
examples/launchd/: README.md  com.openkakao.watch.plist  (+1 more)
kakaotalk_cli/: auth.py  crypto.py  extract_token.py  main.py  packet.py  rest_client.py
openkakao/: auth.py  client.py  main.py  rest_client.py  sniffer.py
openkakao-rs/: Cargo.toml  IMPROVEMENT_PLAN.md  README.md  config.example.toml
openkakao-rs/scripts/: mitm_capture_tokens.py
openkakao-rs/src/: auth.rs  auth_flow.rs  config.rs  credentials.rs  error.rs  export.rs  lib.rs  local_db.rs  loco_helpers.rs  main.rs  message_db.rs  model.rs  rest.rs  state.rs  util.rs
openkakao-rs/src/commands/: analytics.rs  auth.rs  chats.rs  doctor.rs  download.rs  members.rs  mod.rs  probe.rs  profile.rs  read.rs  rest.rs  send.rs  watch.rs
openkakao-rs/src/loco/: client.rs  crypto.rs  packet.rs
openkakao-rs/tests/: auth_flow_test.rs  cli_test.rs  loco_client_test.rs  loco_crypto_test.rs  loco_packet_test.rs  message_db_test.rs
scripts/: capture_kakao_simple.sh  capture_loco.py  mitm_kakao.py  run_capture.sh  setup_mitm.sh  verify-launchd-watch.sh
website/: .gitignore  README.md  mdx-components.tsx  next.config.mjs  package.json  pnpm-lock.yaml  source.config.ts  vercel.json
(+98 files in other folders)
