[project]
name = "openkakao"
version = "0.2.0"
description = "OpenKakao — Unofficial KakaoTalk CLI client — read chats, friends, and profiles from your terminal"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["kakao", "kakaotalk", "cli", "loco", "messenger"]
authors = [
    { name = "JungHoonGhae" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
]
dependencies = [
    "pymongo",        # BSON encoding/decoding
    "pycryptodome",   # AES/RSA encryption
    "rich",           # Terminal UI
    "click",          # CLI framework
]

[project.urls]
Homepage = "https://github.com/JungHoonGhae/kakaotalk-cli"
Documentation = "https://github.com/JungHoonGhae/kakaotalk-cli#readme"
Repository = "https://github.com/JungHoonGhae/kakaotalk-cli"
Changelog = "https://github.com/JungHoonGhae/kakaotalk-cli/blob/main/CHANGELOG.md"

[project.scripts]
openkakao = "openkakao.main:cli"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["openkakao*"]
