[package]
name = "openkakao-rs"
version = "0.1.3"
edition = "2021"
description = "Rust CLI client for KakaoTalk macOS cached APIs"
license = "MIT"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0"
plist = "1.7"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "gzip", "brotli", "deflate", "rustls-tls"] }
rusqlite = { version = "0.33", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.18"
time = "=0.3.36"
urlencoding = "2.1"
